--- a/Java/Biblioteca/nbproject/project.properties
+++ b/Java/Biblioteca/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.jar=${dist.dir}/Biblioteca.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.Controlador_Java_DNIe.jar=lib_ext/Controlador_Java_DNIe.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.Controlador_Java_DNIe.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
